--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,121 @@ html, body {
 	height:100%;
 	width: 100%;
 }
+
+h2 {
+	font-family: 'Playfair Diaplay', serif;
+	font-size: 2.5rem;
+	font-weight: 700;
+	color: #2c2c2c;
+	text-align: center;
+	text-decoration: underline;
+}
+
+p {
+	font-family: 'Raleway', serif;
+	font-size: 1.5rem;
+	line-height: 180%;
+	text-align: justify;
+	font-weight: 300;
+}
+
+img {
+	text-align: center;
+	max-width: 100%;
+	height: auto;
+	width: auto;
+}
+
+.intro {
+	height: 100%;
+	width: 100%;
+	margin: auto;
+	background: url(https://static.pexels.com/photos/248159/pexels-photo-248159.jpeg) no-repeat 50% 50%;
+	background-size: cover;
+	display: table;
+	top: 0;
+}
+
+.intro .inner {
+	display: table-cell;
+	vertical-align: middle;
+	width: 100%;
+	max-width: none;
+}
+
+.content {
+	max-width: 600px;
+	margin: auto;
+}
+
+h1 {
+	font-family: 'Playfair', serif;
+	font-size: 5.5rem;
+	font-weight: 700;
+	color: #fff;
+	text-align: center;
+	padding: 2%;
+	text-shadow: 0px 0px 250px #000;
+}
+
+.content p {
+	color: #fff;
+	font-size: 2rem;
+	font-weight: 500;
+}
+.inner {
+	max-width: 600px;
+	margin: auto;
+	line-height: 1.6;
+}
+
+/* Nav styling */
+nav {
+	float: left;
+	padding: 5% 5% 0 0;
+	height: 50px;
+}
+
+nav ul {
+	list-style: none;
+	float: left;
+}
+
+nav ul li {
+	font-family: 'Raleway', serif;
+	font-size: 1.1rem;
+}
+
+nav ul li a {
+	color: #fff;
+	text-decoration: none;
+}
+
+nav ul li a:hover {
+	text-decoration: underline;
+}
+nav ul, nav:active ul {
+	display: none;
+	left: 45px;
+	top: 60px;
+	padding: 8px 0;
+	width: 20%;
+	z-index: 1000;
+}
+
+nav li {
+	width: 100%;
+	padding: 8px 0 10px 7px;
+	margin: 0;
+}
+nav:hover ul {
+	display: block;
+	position: absolute;
+}
+#menu-icon {
+	width: 30px;
+	height: 26px;
+	background: url(../img/nav-icon.png) center;
+	display: inline-block;
+	margin: 50px 0 0 50px;
+}
