--- a/css/style.css
+++ b/css/style.css
@@ -223,11 +223,14 @@ footer.second p {
 	.content h1 {
 		font-size: 300%;
 	}
+	.content p {
+		font-size: 90%;
+	}
 	p{
-		font-size: 120%;
+		font-size: 90%;
 	}
 	h2 {
-		font-size: 160%;;
+		font-size: 100%;;
 	}
 	.left-col {
 		width: 95%;
