--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,15 @@ p {
 img {
 	text-align: center;
 	max-width: 100%;
-	height: auto;
-	width: auto;
+	height: 400px;
+	width: 400px;
 }
 
 .intro {
 	height: 100%;
 	width: 100%;
 	margin: auto;
-	background: url(https://static.pexels.com/photos/248159/pexels-photo-248159.jpeg) no-repeat 50% 50%;
+	background: url("https://images.unsplash.com/photo-1519659404153-8b9f37f95e96?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80") no-repeat 50% 50%;
 	background-size: cover;
 	display: table;
 	top: 0;
@@ -255,9 +255,6 @@ footer.second p {
 		display: block;
 	}
 
-	.parallax {
-		display: none;
-	}
 	.social i {
 		font-size: 170%;
 	}
