--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,16 @@ p {
 	text-align: justify;
 	font-weight: 300;
 }
+#prof-pic {
+	height: 400px;
+	width: 400px;
+}
 
 img {
 	text-align: center;
 	max-width: 100%;
 	height: 400px;
-	width: 400px;
+	width: 500px;
 }
 
 .intro {
