--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ p {
 img {
 	text-align: center;
 	max-width: 100%;
-	height: 400px;
-	width: 500px;
+	height: 500px;
+	width: 700px;
 }
 
 .intro {
@@ -147,6 +147,7 @@ nav:hover ul {
 	width: 22%;
 	padding: 2.5%;
 	float: left;
+	margin-left: 60px;
 	display: grid;
 }
 .one-third-port img:hover {
